[gd_scene load_steps=7 format=3 uid="uid://pg057bch15x8"]

[ext_resource type="Theme" uid="uid://day1x4io7q8lu" path="res://Graphics/Styles/menufont.tres" id="1_1nmbt"]
[ext_resource type="Script" uid="uid://dtxml0ix458i6" path="res://Scenes/ui/menus and screens/pause.gd" id="2_1nmbt"]
[ext_resource type="StyleBox" uid="uid://cnjp6cclogl82" path="res://Graphics/Styles/menu_hover.tres" id="3_ehyfs"]
[ext_resource type="StyleBox" uid="uid://bg5mywnmh2sbb" path="res://Graphics/Styles/menu_pressed.tres" id="4_mjeka"]
[ext_resource type="StyleBox" uid="uid://clyji6tb6te4c" path="res://Graphics/Styles/menu_normal.tres" id="5_clb5k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehyfs"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 12.0
bg_color = Color(0.156863, 0.156863, 0.156863, 0.713726)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.099986, 0.099986, 0.099986, 0.694118)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 1

[node name="Pause" type="MarginContainer"]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -127.0
offset_right = 504.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1nmbt")
script = ExtResource("2_1nmbt")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ehyfs")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Game Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="ExitToMenu" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("3_ehyfs")
theme_override_styles/pressed = ExtResource("4_mjeka")
theme_override_styles/normal = ExtResource("5_clb5k")
text = "Exit To Menu"

[node name="ExitToDesk" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("3_ehyfs")
theme_override_styles/pressed = ExtResource("4_mjeka")
theme_override_styles/normal = ExtResource("5_clb5k")
text = "Exit To Desktop"

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("3_ehyfs")
theme_override_styles/pressed = ExtResource("4_mjeka")
theme_override_styles/normal = ExtResource("5_clb5k")
text = "Resume Game"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/ExitToMenu" to="." method="_on_exit_to_menu_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/ExitToDesk" to="." method="_on_exit_to_desk_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
